# microstation_bevy

./: Cargo.toml  flake.nix  to-paste.sh
Resources/: keybinds.yml  migration.yml
Resources/ConfigPresets/Corvax/: common.toml
Resources/Locale/en-US/job/: role-requirements.ftl
Resources/Locale/ru-RU/borg/: borg.ftl
Resources/Locale/ru-RU/chat/: highlights.ftl
Resources/Locale/ru-RU/guidebook/: guides.ftl
Resources/Locale/ru-RU/job/: job-names.ftl  job-supervisors.ftl  role-requirements.ftl
Resources/Locale/ru-RU/preferences/: loadout-groups.ftl
Resources/Locale/ru-RU/recipes/: tags.ftl
Resources/Locale/ru-RU/smartfridge/: smartfridge.ftl
Resources/Locale/ru-RU/store/: uplink-catalog.ftl
Resources/Maps/: packed.yml
Resources/Maps/_WL/: wl_centcomm.yml  wl_marathon.yml  wl_maus.yml  wl_renga.yml  wl_rest.yml  wl_straumur.yml  wl_terminal.yml
Resources/Maps/_WL/Dungeon/: wl_paper_cmo_maints.yml  wl_paper_contraband.yml  wl_paper_hop_maints.yml  wl_paper_psycho.yml  wl_paper_zoo.yml
Resources/Maps/_WL/Shuttles/: wl_RCC_shuttle.yml  wl_maus_evac.yml  wl_paper_evac.yml  wl_paper_sec.yml  wl_straumur_evac.yml
Resources/Prototypes/: borg_types.yml  explosion.yml  game_presets.yml
Resources/Prototypes/Accents/: word_replacements.yml
Resources/Prototypes/Actions/: types.yml
Resources/Prototypes/Alerts/: alerts.yml
Resources/Prototypes/Body/Organs/: human.yml
Resources/Prototypes/Catalog/: uplink_catalog.yml
Resources/Prototypes/Catalog/Bounties/: bounties.yml
Resources/Prototypes/Catalog/Cargo/: cargo_service.yml  cargo_vending.yml
Resources/Prototypes/Corvax/Loadouts/: loadout_groups.yml  role_loadouts.yml
Resources/Prototypes/Corvax/Species/: ipc.yml  vulpkanin.yml
Resources/Prototypes/Entities/Debugging/: debug_sweps.yml
Resources/Prototypes/Entities/Mobs/: base.yml
Resources/Prototypes/Entities/Stations/: base.yml
Resources/Prototypes/GameRules/: events.yml  roundstart.yml  subgamemodes.yml
Resources/Prototypes/Guidebook/: security.yml
Resources/Prototypes/Loadouts/: role_loadouts.yml
Resources/Prototypes/Loadouts/Miscellaneous/: survival.yml
Resources/Prototypes/Objectives/: objectiveGroups.yml  traitor.yml
Resources/Prototypes/Reagents/: botany.yml  fun.yml  gases.yml  medicine.yml  narcotics.yml  pyrotechnic.yml  toxins.yml
Resources/Prototypes/Recipes/Lathes/: medical.yml
Resources/Prototypes/Research/: civilianservices.yml
Resources/Prototypes/Species/: arachnid.yml  diona.yml  human.yml  moth.yml  reptilian.yml  slime.yml  species_weights.yml  vox.yml
Resources/Prototypes/Traits/: speech.yml
Resources/Prototypes/_WL/: lobbyscreens.yml  tags.yml
microstation_bevy_client/: Cargo.toml
microstation_bevy_client/src/: input.rs  main.rs  network.rs  plugin.rs  render.rs  rsi.rs
microstation_bevy_client/src/components/: player.rs
microstation_bevy_client/src/render/: icon_smoothing.rs  item.rs  mod.rs
microstation_bevy_server/: Cargo.toml
microstation_bevy_server/src/: console.rs  game.rs  main.rs  network.rs  plugin.rs
microstation_bevy_shared/: Cargo.toml
microstation_bevy_shared/src/: color.rs  draw_depth.rs  helpers.rs  lib.rs  plugin.rs  protocol.rs  tile.rs  world.rs
microstation_bevy_shared/src/components/: icon_smooth.rs  item.rs  meta_data.rs  mod.rs  player.rs  sprite.rs  transform.rs
microstation_bevy_shared/src/events/: mod.rs
microstation_bevy_shared/src/prototypes/: entity.rs  loader.rs  mod.rs  tile.rs
(+274 files in other folders)
