[workspace]
resolver = "3"
members = ["microstation_bevy_client","microstation_bevy_server","microstation_bevy_shared"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1
lto = "fat"
incremental = false
debug = false

[workspace.dependencies]
bevy = { version = "0.18.0", default-features = false }
bevy_replicon_renet = { version = "0.15.0", features = ["renet_netcode"] }
bevy_replicon = { version = "0.39.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.23"
serde_nested_with = "0.2.6"
phf = { version = "0.13.1", features = ["macros"] }
